# squish

./: CMakeLists.txt  appveyor.yml  config.h.in
include/: simd.h
